...

#if EasyPECSPlus
            CapsuleButton(L10n.Symbols.aacStandard, role: .secondary) {
                logAction("AACStandardSymbolSearch")
                showAACStandardSymbolsPicker = true
            }
            .accessibilityIdentifier("aacStandardSymbolSearchButton")
            .frame(maxWidth: AppSettings.maxButtonWidth)
#endif

            if UIImagePickerController.isSourceTypeAvailable(.camera) {
                CapsuleButton(L10n.NoPhotosView.takePhotoButton, role: .secondary) {
                    logAction("takePhoto")
                    takeBoardPhoto(pageLayoutState: pageLayoutState)
                }
                .accessibilityIdentifier(presentation == .card
                                         ? "takeBoardPhoto"
                                         : AccessibilityIdentifiers.NoPhotosView.takePhotoButton)
                .accessibilityHint(L10n.MainMenu.takePhotoHint)
                .frame(maxWidth: AppSettings.maxButtonWidth)
...
